Agregamos la doc. para 4 endpoints
